2010-02-17  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/ndmp-device.c: sanity-check file number
	* device-src/xfer-dest-taper-directtcp.c: same
	* device-src/xfer-dest-taper-splitter.c: same

2010-02-17  Paul C. Mantz <pcmantz@zmanda.com>
	* perl/Amanda/Util.swg (finish_application): Don't check $config_name.

2010-02-17  Paul C. Mantz <pcmantz@zmanda.com>
	* perl/Amanda/Report/human.pm: fixed output of 'incr dump only'
	  fields

2010-02-17  Jean-Louis Martineau <martineau@zmanda.com>
	* ndmp-src/ndmjob_main.c, ndmp-src/amndmjob_main.c:
	  add config_init(0, NULL);
	* recover-src/extract_list.c: Typo.

2010-02-16  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amadmin.c: Set a config for version subcommand.

2010-02-16  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amfeatures.c: New fe_amrecover_origsize_in_header.
	* common-src/amfeatures.h: New fe_amrecover_origsize_in_header.
	* common-src/fileheader.c: Parse/read 'ORIGSIZE=' in header.
	* common-src/fileheader.h (dumpfile_t): Add orig_size.
	* common-src/timestamp.c (get_time_from_timestamp): New function to
	  convert a char timestamp to time_t.
	* common-src/timestamp.h (get_time_from_timestamp): Prototype.
	* restore-src/restore.c: Check fe_amrecover_origsize_in_header.
	* server-src/driver.c: Protoocl change to send orig_kb to taper.
	* server-src/driverio.c: Protoocl change to send orig_kb to taper.
	* server-src/find.c: Get orig_kb from log files.
	* server-src/find.h (find_result_t): add orig_kb.
	* server-src/holding.c (holding_set_origsize): New function to seti
	  'ORIGSIZE' in an holding file.
	* server-src/holding.h (holding_set_origsize): Prototype.
	* server-src/infofile.c: '(char *)0' to NULL.
	* server-src/taper.pl: Parse orig-kb in protocol, log it.
	* perl/Amanda/DB/Catalog.pm: Set orig_kb.
	* perl/Amanda/Logfile.swg (find_result_t): Add orig_kb.
	* installcheck/Amanda_DB_Catalog.pl: Check orig-kb in taper stats.